# avs-hw-2

./: CMakeLists.txt  README.md  build.sh
src/: buffer.cpp  buffer.h  circle.cpp  circle.h  color.cpp  color.h  main.cpp  point.cpp  point.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h  triangle.cpp  triangle.h
tests/: circle.out  gen.py  rand.out  rectangle.out  triangle.out
